--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -1,27 +1,18 @@
-/* setting border box for all elements */
-* { 
-box-sizing: border-box;
+.large-class {
+  position: relative;
+  color: #00ff00;
+  background: grey;
+  height: 700px;
+  margin-bottom: 10px;
+}
+
+.bottom {
+  right: 0px;  
+  color: #00ff00;
+  position: absolute;
+  bottom: 0px;
+  background: black;
 }
 
 
-/* Formatting of headers: h1 and h2 */
-h1 {
-text-align: center;
-font-family: "Comic Sans MS", cursive, sans-serif;
-font-size: 1.75em;
-}
 
-h2 {
-text-align: top right;
-border: 1px solid black;
-float: right;
-position: relative;
-right: 0px;
-top: 0px;
-margin: 0px;
-background: pink;
-clear: left;
-padding: 5px 60px 5px 60px;
-font-family: Arial, Helvetica, sans-serif;
-font-size: 1.25em;
-}
